# appleby

./: .gitignore  APPLEBY.md  CLAUDE.md  Cargo.toml  FEATURE.md
conf/: config.toml
docs/: anthropic-r1-debugging.md  api_test.md  current-react-architecture.md  math_talk.md  now.md  project-structure-and-testing.md  talk.md  zfc_walkthrough.md
docs/QA/: 2026-07-24.md
docs/agent工程学指南/: 0-Agent工程指南引言.md  1-ReAct.md  2-双循环-Specialist&Synthesizer.md
docs/history/: CLAUDE.md  specialist-state-boundary.md  talk.md
scripts/: clean_and_run.sh  clean_and_run_r1.sh
src/: config.rs  lib.rs
src/api_adapter/: conversation.rs  mod.rs  openai.rs
src/state/: config.rs  conversation_context.rs  log.rs  loop_state.rs  mod.rs  system_prompt.rs
src/tool/: ask_help.rs  bash.rs  edit_file.rs  mod.rs  read_file.rs  write_file.rs
src/tui/: app.rs  mod.rs  render.rs
src/utils/: jsonl.rs
src/workflow/: loop_workflow.rs  mod.rs  tui_channel.rs
tests/: tool_workflow.rs
tests/fixtures/files/: unicode.txt
tests/support/: mod.rs
