[package]
name = "appleby"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
auto-context = "0.1"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anthropic-ai-sdk = "0.2"
async-trait = "0.1"
chrono = "0.4"
cron = "0.17"
derive_builder = "0.20"
dotenvy = "0.15"
fs4 = "1"
inquire = "0.9"
regex = "1"
schemars = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full"] }
strum = "0.28"
strum_macros = "0.28"
tera = "2"
walkdir = "2"
wildmatch = "2"
proc-macro2 = "1"
quote = "1"
toml = "1"
rand = "0.10"

[dev-dependencies]
tempfile = "3"